--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>clase de git</h1>
     
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magni velit nobis, quis qui, necessitatibus autem, iure ad atque commodi omnis. Maxime maiores dolorem quam error libero hic doloribus molestiae!
+    </p>
     
 </body>
 </html>
