--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>git clase</title>
 </head>
 <body>
-    <h1>clase de git</h1>
+    <h1>clase de git hub</h1>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magni velit nobis, quis qui, necessitatibus autem, iure ad atque commodi omnis. Maxime maiores dolorem quam error libero hic doloribus molestiae!
     </p>
