--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>clase de git hub</h1>
+
+    <p>Lorem ipsum dolor sit.</p>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magni velit nobis, quis qui, necessitatibus autem, iure ad atque commodi omnis. Maxime maiores dolorem quam error libero hic doloribus molestiae!
     </p>
